Refactor command loading/sync and security fixes
Improve command registration, syncing, and secrets handling across the bot. Key changes:

- admin_commands.py: Reworked clear_duplicate_commands to detect duplicates, report findings, clear and resync commands, reload cogs, and provide richer error/success embeds and logging.
- bot.py: Robust cog loading with expected-cog validation, detailed logging, duplicate detection in the command tree, and stricter failure behavior to avoid syncing incomplete command sets.
- team_system.py: Add immediate interaction.defer() where needed and switch synchronous DB calls to async await calls to prevent timeouts and blocking.
- supabase_api.py: Remove hardcoded Supabase credentials; load SUPABASE_URL and SUPABASE_SERVICE_KEY from environment and fail fast if key is missing.
- config.py: Remove default hardcoded DATABASE_URL, add simple DISCORD_TOKEN/DATABASE_URL validation checks.
- force_sync.py: Ensure cogs are loaded before syncing, report cog load failures, print command tree diagnostics, and verify expected team commands after sync.
- .gitignore: Ignore all Markdown files except README.md.
- Removed several one-off debug/test scripts and added test_bug_exploration.py, a comprehensive test suite that exercises duplicate registration, force-sync behavior, command responsiveness, and silent cog failures to help reproduce and validate fixes.

These changes aim to prevent duplicate slash command registrations, ensure commands are only synced when all cogs load successfully, avoid leaking secrets in source, and improve diagnostics for future troubleshooting.

--- a/.gitignore
+++ b/.gitignore
@@ -87,6 +87,6 @@ Thumbs.db
 htmlcov/
 
 # Documentation (if contains sensitive info)
-# Uncomment if needed:
-# PRIVATE_*.md
-# *_PRIVATE.md
+# Ignore all .md files except README.md
+*.md
+!README.md
